examples/good/01-02-types-shadowing.lagger
int main(){
    int x = 1;
    string x = "hello";
    boolean x = true;
    return 0;
}