examples/bad/02-01-invalid-add.lagger
int main(){
    int x = 0;
    string s = "hello";
    int y = x + s;
    return 0;
}